--- a/mod/utc/ele_e_medium.utc.yml
+++ b/mod/utc/ele_e_medium.utc.yml
@@ -1,22 +1,22 @@
 --- !nwn-lib.elv.es,2008-12/struct 
 __data_type: UTC
 __struct_id: 4294967295
-Appearance_Type: {type: :word, value: 1024}
+Appearance_Type: {type: :word, value: 1025}
 BodyBag: {type: :byte, value: 0}
-CRAdjust: {type: :int, value: -2}
+CRAdjust: {type: :int, value: -1}
 Cha: {type: :byte, value: 11}
-ChallengeRating: {type: :float, value: 5.0}
+ChallengeRating: {type: :float, value: 3.0}
 ClassList: 
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 2
     Class: {type: :int, value: 16}
-    ClassLevel: {type: :short, value: 8}
+    ClassLevel: {type: :short, value: 4}
 Comment: {type: :cexostr, value: ""}
-Con: {type: :byte, value: 19}
+Con: {type: :byte, value: 17}
 Conversation: {type: :resref, value: ""}
-CurrentHitPoints: {type: :short, value: 64}
+CurrentHitPoints: {type: :short, value: 32}
 DecayTime: {type: :dword, value: 5000}
 Deity: {type: :cexostr, value: ""}
 Description: 
@@ -28,26 +28,25 @@ Disarmable: {type: :byte, value: 1}
 Equip_ItemList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 16384, EquippedRes: {type: :resref, value: nw_it_crewpb016}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 32768, EquippedRes: {type: :resref, value: nw_it_crewpb016}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 131072, EquippedRes: {type: :resref, value: elementargross}}
-FactionID: {type: :word, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 16384, EquippedRes: {type: :resref, value: nw_it_crewpb010}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 32768, EquippedRes: {type: :resref, value: nw_it_crewpb010}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 131072, EquippedRes: {type: :resref, value: elementar}}
+FactionID: {type: :word, value: 1}
 FeatList: 
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 6}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 228}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 28}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 391}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 289}}
 FirstName: 
   type: :cexolocstr
   value: 
-    0: Grosser Erdelementar
+    0: Erdelementar
 Gender: {type: :byte, value: 4}
 GoodEvil: {type: :byte, value: 50}
-HitPoints: {type: :short, value: 64}
-Int: {type: :byte, value: 6}
+HitPoints: {type: :short, value: 32}
+Int: {type: :byte, value: 4}
 Interruptable: {type: :byte, value: 1}
 IsImmortal: {type: :byte, value: 0}
 IsPC: {type: :byte, value: 0}
@@ -57,8 +56,8 @@ LastName:
     4: ""
 LawfulChaotic: {type: :byte, value: 50}
 Lootable: {type: :byte, value: 0}
-MaxHitPoints: {type: :short, value: 96}
-NaturalAC: {type: :byte, value: 10}
+MaxHitPoints: {type: :short, value: 44}
+NaturalAC: {type: :byte, value: 9}
 NoPermDeath: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 22}
 PerceptionRange: {type: :byte, value: 11}
@@ -88,7 +87,7 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 6}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 4}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
@@ -99,7 +98,7 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 5}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 3}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
@@ -116,17 +115,17 @@ SpecAbilityList:
   value: []
 
 StartingPackage: {type: :byte, value: 78}
-Str: {type: :byte, value: 25}
+Str: {type: :byte, value: 21}
 Subrace: {type: :cexostr, value: ""}
-Tag: {type: :cexostr, value: GrosserErdelementar}
-Tail: {type: :byte, value: 0}
+Tag: {type: :cexostr, value: ele_e_medium}
+Tail_New: {type: :dword, value: 0}
 TemplateList: 
   type: :list
   value: []
 
-TemplateResRef: {type: :resref, value: grossererdelemen}
-WalkRate: {type: :int, value: 7}
-Wings: {type: :byte, value: 0}
+TemplateResRef: {type: :resref, value: ele_e_medium}
+WalkRate: {type: :int, value: 3}
+Wings_New: {type: :dword, value: 0}
 Wis: {type: :byte, value: 11}
 fortbonus: {type: :short, value: 0}
 refbonus: {type: :short, value: 0}
