--- a/mod/utc/ele_f_large.utc.yml
+++ b/mod/utc/ele_f_large.utc.yml
@@ -1,11 +1,11 @@
 --- !nwn-lib.elv.es,2008-12/struct 
 __data_type: UTC
 __struct_id: 4294967295
-Appearance_Type: {type: :word, value: 1006}
+Appearance_Type: {type: :word, value: 1021}
 BodyBag: {type: :byte, value: 0}
-CRAdjust: {type: :int, value: -4}
+CRAdjust: {type: :int, value: -3}
 Cha: {type: :byte, value: 11}
-ChallengeRating: {type: :float, value: 2.0}
+ChallengeRating: {type: :float, value: 5.0}
 ClassList: 
   type: :list
   value: 
@@ -23,31 +23,34 @@ Description:
   type: :cexolocstr
   value: {}
 
-Dex: {type: :byte, value: 25}
-Disarmable: {type: :byte, value: 1}
+Dex: {type: :byte, value: 21}
+Disarmable: {type: :byte, value: 0}
 Equip_ItemList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 16384, EquippedRes: {type: :resref, value: it_crewpb016}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 32768, EquippedRes: {type: :resref, value: it_crewpb016}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 131072, EquippedRes: {type: :resref, value: elementargross}}
-FactionID: {type: :word, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 16384, EquippedRes: {type: :resref, value: slam_ele_f_gross}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 32768, EquippedRes: {type: :resref, value: slam_ele_f_gross}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 131072, EquippedRes: {type: :resref, value: elementarfeuergr}}
+FactionID: {type: :word, value: 1}
 FeatList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 10}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 228}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 289}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 10}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 377}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 26}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 392}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 42}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 289}}
 FirstName: 
   type: :cexolocstr
   value: 
-    0: Grosser Luftelementar
+    0: Feuerelementar (Gross)
 Gender: {type: :byte, value: 4}
 GoodEvil: {type: :byte, value: 50}
 HitPoints: {type: :short, value: 64}
 Int: {type: :byte, value: 6}
-Interruptable: {type: :byte, value: 1}
+Interruptable: {type: :byte, value: 0}
 IsImmortal: {type: :byte, value: 0}
 IsPC: {type: :byte, value: 0}
 LastName: 
@@ -57,13 +60,13 @@ LastName:
 LawfulChaotic: {type: :byte, value: 50}
 Lootable: {type: :byte, value: 0}
 MaxHitPoints: {type: :short, value: 88}
-NaturalAC: {type: :byte, value: 3}
+NaturalAC: {type: :byte, value: 4}
 NoPermDeath: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 22}
 PerceptionRange: {type: :byte, value: 11}
 Phenotype: {type: :int, value: 0}
 Plot: {type: :byte, value: 0}
-PortraitId: {type: :word, value: 2087}
+PortraitId: {type: :word, value: 2091}
 Race: {type: :byte, value: 16}
 ScriptAttacked: {type: :resref, value: nw_c2_default5}
 ScriptDamaged: {type: :resref, value: nw_c2_default6}
@@ -84,7 +87,7 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 11}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 5}}
@@ -109,7 +112,7 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-SoundSetFile: {type: :word, value: 32}
+SoundSetFile: {type: :word, value: 34}
 SpecAbilityList: 
   type: :list
   value: []
@@ -117,15 +120,15 @@ SpecAbilityList:
 StartingPackage: {type: :byte, value: 78}
 Str: {type: :byte, value: 14}
 Subrace: {type: :cexostr, value: ""}
-Tag: {type: :cexostr, value: GrosserLuftelementar}
-Tail: {type: :byte, value: 0}
+Tag: {type: :cexostr, value: ele_f_large}
+Tail_New: {type: :dword, value: 0}
 TemplateList: 
   type: :list
   value: []
 
-TemplateResRef: {type: :resref, value: grosserlufteleme}
-WalkRate: {type: :int, value: 7}
-Wings: {type: :byte, value: 0}
+TemplateResRef: {type: :resref, value: ele_f_large}
+WalkRate: {type: :int, value: 5}
+Wings_New: {type: :dword, value: 0}
 Wis: {type: :byte, value: 11}
 fortbonus: {type: :short, value: 0}
 refbonus: {type: :short, value: 0}
