--- a/mod/utc/ele_w_huge.utc.yml
+++ b/mod/utc/ele_w_huge.utc.yml
@@ -1,57 +1,57 @@
 --- !nwn-lib.elv.es,2008-12/struct 
 __data_type: UTC
 __struct_id: 4294967295
-Appearance_Type: {type: :word, value: 1006}
+Appearance_Type: {type: :word, value: 1360}
 BodyBag: {type: :byte, value: 0}
-CRAdjust: {type: :int, value: -14}
+CRAdjust: {type: :int, value: -7}
 Cha: {type: :byte, value: 11}
-ChallengeRating: {type: :float, value: 3.0}
+ChallengeRating: {type: :float, value: 9.0}
 ClassList: 
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 2
     Class: {type: :int, value: 16}
-    ClassLevel: {type: :short, value: 21}
+    ClassLevel: {type: :short, value: 16}
 Comment: {type: :cexostr, value: ""}
-Con: {type: :byte, value: 18}
+Con: {type: :byte, value: 21}
 Conversation: {type: :resref, value: ""}
-CurrentHitPoints: {type: :short, value: 168}
+CurrentHitPoints: {type: :short, value: 128}
 DecayTime: {type: :dword, value: 5000}
 Deity: {type: :cexostr, value: ""}
 Description: 
   type: :cexolocstr
-  value: {}
-
-Dex: {type: :byte, value: 31}
-Disarmable: {type: :byte, value: 1}
+  value: 
+    4: ""
+Dex: {type: :byte, value: 18}
+Disarmable: {type: :byte, value: 0}
 Equip_ItemList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 16384, EquippedRes: {type: :resref, value: it_crewpb018}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 32768, EquippedRes: {type: :resref, value: it_crewpb018}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 131072, EquippedRes: {type: :resref, value: elementarhherer}}
-FactionID: {type: :word, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 16384, EquippedRes: {type: :resref, value: earthslam}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 32768, EquippedRes: {type: :resref, value: earthslam}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 131072, EquippedRes: {type: :resref, value: elementargross}}
+FactionID: {type: :word, value: 1}
 FeatList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 26}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 408}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 6}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 228}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 391}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 22}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 23}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 28}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 289}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 377}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 0}}
 FirstName: 
   type: :cexolocstr
   value: 
-    0: "H\xF6herer Luftelementar"
+    0: Wasserelementar (Riesig)
 Gender: {type: :byte, value: 4}
 GoodEvil: {type: :byte, value: 50}
-HitPoints: {type: :short, value: 168}
-Int: {type: :byte, value: 8}
-Interruptable: {type: :byte, value: 1}
+HitPoints: {type: :short, value: 128}
+Int: {type: :byte, value: 6}
+Interruptable: {type: :byte, value: 0}
 IsImmortal: {type: :byte, value: 0}
 IsPC: {type: :byte, value: 0}
 LastName: 
@@ -60,14 +60,14 @@ LastName:
     4: ""
 LawfulChaotic: {type: :byte, value: 50}
 Lootable: {type: :byte, value: 0}
-MaxHitPoints: {type: :short, value: 252}
-NaturalAC: {type: :byte, value: 6}
+MaxHitPoints: {type: :short, value: 208}
+NaturalAC: {type: :byte, value: 8}
 NoPermDeath: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 22}
 PerceptionRange: {type: :byte, value: 11}
 Phenotype: {type: :int, value: 0}
 Plot: {type: :byte, value: 0}
-PortraitId: {type: :word, value: 2087}
+PortraitId: {type: :word, value: 2102}
 Race: {type: :byte, value: 16}
 ScriptAttacked: {type: :resref, value: nw_c2_default5}
 ScriptDamaged: {type: :resref, value: nw_c2_default6}
@@ -91,7 +91,7 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 14}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 9}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
@@ -102,7 +102,7 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 14}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 10}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
@@ -113,24 +113,24 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-SoundSetFile: {type: :word, value: 32}
+SoundSetFile: {type: :word, value: 35}
 SpecAbilityList: 
   type: :list
   value: []
 
 StartingPackage: {type: :byte, value: 78}
-Str: {type: :byte, value: 20}
+Str: {type: :byte, value: 24}
 Subrace: {type: :cexostr, value: ""}
-Tag: {type: :cexostr, value: HhererLuftelementar}
-Tail: {type: :byte, value: 0}
+Tag: {type: :cexostr, value: ele_w_huge}
+Tail_New: {type: :dword, value: 812}
 TemplateList: 
   type: :list
   value: []
 
-TemplateResRef: {type: :resref, value: ele_l_hherer}
+TemplateResRef: {type: :resref, value: ele_w_huge}
 WalkRate: {type: :int, value: 7}
-Wings: {type: :byte, value: 0}
+Wings_New: {type: :dword, value: 0}
 Wis: {type: :byte, value: 11}
-fortbonus: {type: :short, value: 0}
+fortbonus: {type: :short, value: 5}
 refbonus: {type: :short, value: 0}
 willbonus: {type: :short, value: 0}
