--- a/mod/utc/ele_w_large.utc.yml
+++ b/mod/utc/ele_w_large.utc.yml
@@ -31,19 +31,19 @@ Equip_ItemList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 16384, EquippedRes: {type: :resref, value: airslam}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 32768, EquippedRes: {type: :resref, value: airslam}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 131072, EquippedRes: {type: :resref, value: elementargross}}
-FactionID: {type: :word, value: 2}
+FactionID: {type: :word, value: 1}
 FeatList: 
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 6}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 228}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 28}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 391}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 28}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 289}}
 FirstName: 
   type: :cexolocstr
   value: 
-    0: Grosser Wasserelementar
+    0: Wasserelementar (Gross)
 Gender: {type: :byte, value: 4}
 GoodEvil: {type: :byte, value: 50}
 HitPoints: {type: :short, value: 64}
@@ -58,7 +58,7 @@ LastName:
 LawfulChaotic: {type: :byte, value: 50}
 Lootable: {type: :byte, value: 0}
 MaxHitPoints: {type: :short, value: 96}
-NaturalAC: {type: :byte, value: 8}
+NaturalAC: {type: :byte, value: 9}
 NoPermDeath: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 22}
 PerceptionRange: {type: :byte, value: 11}
@@ -118,15 +118,15 @@ SpecAbilityList:
 StartingPackage: {type: :byte, value: 78}
 Str: {type: :byte, value: 20}
 Subrace: {type: :cexostr, value: ""}
-Tag: {type: :cexostr, value: GrosserWasserelementar}
-Tail: {type: :byte, value: 0}
+Tag: {type: :cexostr, value: ele_w_large}
+Tail_New: {type: :dword, value: 0}
 TemplateList: 
   type: :list
   value: []
 
-TemplateResRef: {type: :resref, value: grosserwasserele}
-WalkRate: {type: :int, value: 7}
-Wings: {type: :byte, value: 0}
+TemplateResRef: {type: :resref, value: ele_w_large}
+WalkRate: {type: :int, value: 3}
+Wings_New: {type: :dword, value: 0}
 Wis: {type: :byte, value: 11}
 fortbonus: {type: :short, value: 0}
 refbonus: {type: :short, value: 0}
