--- a/mod/utc/ele_w_medium.utc.yml
+++ b/mod/utc/ele_w_medium.utc.yml
@@ -1,11 +1,11 @@
 --- !nwn-lib.elv.es,2008-12/struct 
 __data_type: UTC
 __struct_id: 4294967295
-Appearance_Type: {type: :word, value: 1007}
+Appearance_Type: {type: :word, value: 1019}
 BodyBag: {type: :byte, value: 0}
 CRAdjust: {type: :int, value: -1}
 Cha: {type: :byte, value: 11}
-ChallengeRating: {type: :float, value: 2.0}
+ChallengeRating: {type: :float, value: 3.0}
 ClassList: 
   type: :list
   value: 
@@ -14,7 +14,7 @@ ClassList:
     Class: {type: :int, value: 16}
     ClassLevel: {type: :short, value: 4}
 Comment: {type: :cexostr, value: ""}
-Con: {type: :byte, value: 14}
+Con: {type: :byte, value: 17}
 Conversation: {type: :resref, value: ""}
 CurrentHitPoints: {type: :short, value: 32}
 DecayTime: {type: :dword, value: 5000}
@@ -23,26 +23,26 @@ Description:
   type: :cexolocstr
   value: {}
 
-Dex: {type: :byte, value: 21}
-Disarmable: {type: :byte, value: 1}
+Dex: {type: :byte, value: 12}
+Disarmable: {type: :byte, value: 0}
 Equip_ItemList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 16384, EquippedRes: {type: :resref, value: nw_it_crewpb005}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 16384, EquippedRes: {type: :resref, value: nw_it_crewpb010}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 32768, EquippedRes: {type: :resref, value: nw_it_crewpb010}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 131072, EquippedRes: {type: :resref, value: elementar}}
-FactionID: {type: :word, value: 2}
+FactionID: {type: :word, value: 1}
 FeatList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 10}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 6}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 228}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 28}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 289}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 377}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 42}}
 FirstName: 
   type: :cexolocstr
   value: 
-    0: Mittlerer Luftelementar
+    0: Wasserelementar
 Gender: {type: :byte, value: 4}
 GoodEvil: {type: :byte, value: 50}
 HitPoints: {type: :short, value: 32}
@@ -56,14 +56,14 @@ LastName:
     4: ""
 LawfulChaotic: {type: :byte, value: 50}
 Lootable: {type: :byte, value: 0}
-MaxHitPoints: {type: :short, value: 40}
-NaturalAC: {type: :byte, value: 3}
+MaxHitPoints: {type: :short, value: 44}
+NaturalAC: {type: :byte, value: 8}
 NoPermDeath: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 22}
 PerceptionRange: {type: :byte, value: 11}
 Phenotype: {type: :int, value: 0}
 Plot: {type: :byte, value: 0}
-PortraitId: {type: :word, value: 2087}
+PortraitId: {type: :word, value: 312}
 Race: {type: :byte, value: 16}
 ScriptAttacked: {type: :resref, value: nw_c2_default5}
 ScriptDamaged: {type: :resref, value: nw_c2_default6}
@@ -109,23 +109,23 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-SoundSetFile: {type: :word, value: 32}
+SoundSetFile: {type: :word, value: 35}
 SpecAbilityList: 
   type: :list
   value: []
 
 StartingPackage: {type: :byte, value: 78}
-Str: {type: :byte, value: 12}
+Str: {type: :byte, value: 16}
 Subrace: {type: :cexostr, value: ""}
-Tag: {type: :cexostr, value: MittlererLuftelementar}
-Tail: {type: :byte, value: 0}
+Tag: {type: :cexostr, value: ele_w_medium}
+Tail_New: {type: :dword, value: 0}
 TemplateList: 
   type: :list
   value: []
 
-TemplateResRef: {type: :resref, value: mittlererluftele}
-WalkRate: {type: :int, value: 7}
-Wings: {type: :byte, value: 0}
+TemplateResRef: {type: :resref, value: ele_w_medium}
+WalkRate: {type: :int, value: 3}
+Wings_New: {type: :dword, value: 0}
 Wis: {type: :byte, value: 11}
 fortbonus: {type: :short, value: 0}
 refbonus: {type: :short, value: 0}
