--- a/mod/uti/sum_cardp085.uti.yml
+++ b/mod/uti/sum_cardp085.uti.yml
@@ -5,7 +5,7 @@ AddCost: {type: :dword, value: 0}
 BaseItem: {type: :int, value: 24}
 Charges: {type: :byte, value: 0}
 Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 93}
+Cost: {type: :dword, value: 13}
 Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
@@ -14,12 +14,13 @@ DescIdentified:
 Description: 
   type: :cexolocstr
   value: 
+    0: ""
     4: ""
 Identified: {type: :byte, value: 1}
 LocalizedName: 
   type: :cexolocstr
   value: 
-    0: "Beschw\xF6rerrune: Stufe 6 -  Grosser Feuerelementar"
+    0: "Beschw\xF6rerrune: Stufe 6 - Feuerelementar (Gross)"
 ModelPart1: {type: :byte, value: 29}
 PaletteID: {type: :byte, value: 54}
 Plot: {type: :byte, value: 1}
@@ -30,7 +31,7 @@ PropertiesList:
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
     CostTable: {type: :byte, value: 10}
-    CostValue: {type: :word, value: 3}
+    CostValue: {type: :word, value: 1}
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 0}
     PropertyName: {type: :word, value: 11}
@@ -46,18 +47,5 @@ PropertiesList:
     Subtype: {type: :word, value: 329}
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: CWIZ_6_grosserfeuerelem}
+Tag: {type: :cexostr, value: CWIZ_6_ele_f_large}
 TemplateResRef: {type: :resref, value: sum_cardp085}
-VarTable: 
-  type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 0
-    Name: {type: :cexostr, value: CARD_LEVEL}
-    Type: {type: :dword, value: 1}
-    Value: {type: :int, value: 6}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 0
-    Name: {type: :cexostr, value: CARD_RR}
-    Type: {type: :dword, value: 3}
-    Value: {type: :cexostr, value: GrosserFeuerelementar}
