--- a/mod/uti/sum_cardp175.uti.yml
+++ b/mod/uti/sum_cardp175.uti.yml
@@ -10,7 +10,7 @@ Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
   value: 
-    0: "Diese Karte erlaubt es einen grossen Erdelementar zu beschw\xF6ren."
+    0: "Diese Rune erlaubt es ein h\xF6heres Feuerelementar zu beschw\xF6ren."
 Description: 
   type: :cexolocstr
   value: 
@@ -20,8 +20,8 @@ Identified: {type: :byte, value: 1}
 LocalizedName: 
   type: :cexolocstr
   value: 
-    0: "Druidenrune: Stufe 5 - Erdelementar (Gross)"
-ModelPart1: {type: :byte, value: 30}
+    0: "Beschw\xF6rerrune: Stufe 8 - Feuerelementar (H\xF6heres)"
+ModelPart1: {type: :byte, value: 29}
 PaletteID: {type: :byte, value: 54}
 Plot: {type: :byte, value: 1}
 PropertiesList: 
@@ -47,5 +47,5 @@ PropertiesList:
     Subtype: {type: :word, value: 329}
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: CDRU_5_ele_e_large}
-TemplateResRef: {type: :resref, value: sum_cardp119}
+Tag: {type: :cexostr, value: CWIZ_8_ele_f_greater}
+TemplateResRef: {type: :resref, value: sum_cardp175}
