--- a/mod/utm/cards_druid.utm.yml
+++ b/mod/utm/cards_druid.utm.yml
@@ -371,6 +371,30 @@ StoreList:
         InventoryRes: {type: :resref, value: sum_cardbag001}
         Repos_PosX: {type: :word, value: 6}
         Repos_Posy: {type: :word, value: 5}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 57
+        Infinite: {type: :byte, value: 1}
+        InventoryRes: {type: :resref, value: sum_cardp182}
+        Repos_PosX: {type: :word, value: 8}
+        Repos_Posy: {type: :word, value: 5}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 58
+        Infinite: {type: :byte, value: 1}
+        InventoryRes: {type: :resref, value: sum_cardp183}
+        Repos_PosX: {type: :word, value: 9}
+        Repos_Posy: {type: :word, value: 5}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 59
+        Infinite: {type: :byte, value: 1}
+        InventoryRes: {type: :resref, value: sum_cardp185}
+        Repos_PosX: {type: :word, value: 0}
+        Repos_Posy: {type: :word, value: 6}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 60
+        Infinite: {type: :byte, value: 1}
+        InventoryRes: {type: :resref, value: sum_cardp184}
+        Repos_PosX: {type: :word, value: 1}
+        Repos_Posy: {type: :word, value: 6}
 Tag: {type: :cexostr, value: cards_druid}
 WillNotBuy: 
   type: :list
