--- a/mod/utm/cards_wizard.utm.yml
+++ b/mod/utm/cards_wizard.utm.yml
@@ -521,6 +521,54 @@ StoreList:
         InventoryRes: {type: :resref, value: sum_cardp173}
         Repos_PosX: {type: :word, value: 4}
         Repos_Posy: {type: :word, value: 8}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 82
+        Infinite: {type: :byte, value: 1}
+        InventoryRes: {type: :resref, value: sum_cardp177}
+        Repos_PosX: {type: :word, value: 5}
+        Repos_Posy: {type: :word, value: 8}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 83
+        Infinite: {type: :byte, value: 1}
+        InventoryRes: {type: :resref, value: sum_cardp175}
+        Repos_PosX: {type: :word, value: 6}
+        Repos_Posy: {type: :word, value: 8}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 84
+        Infinite: {type: :byte, value: 1}
+        InventoryRes: {type: :resref, value: sum_cardp176}
+        Repos_PosX: {type: :word, value: 7}
+        Repos_Posy: {type: :word, value: 8}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 85
+        Infinite: {type: :byte, value: 1}
+        InventoryRes: {type: :resref, value: sum_cardp174}
+        Repos_PosX: {type: :word, value: 8}
+        Repos_Posy: {type: :word, value: 8}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 86
+        Infinite: {type: :byte, value: 1}
+        InventoryRes: {type: :resref, value: sum_cardp178}
+        Repos_PosX: {type: :word, value: 9}
+        Repos_Posy: {type: :word, value: 8}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 87
+        Infinite: {type: :byte, value: 1}
+        InventoryRes: {type: :resref, value: sum_cardp179}
+        Repos_PosX: {type: :word, value: 0}
+        Repos_Posy: {type: :word, value: 9}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 88
+        Infinite: {type: :byte, value: 1}
+        InventoryRes: {type: :resref, value: sum_cardp180}
+        Repos_PosX: {type: :word, value: 1}
+        Repos_Posy: {type: :word, value: 9}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 89
+        Infinite: {type: :byte, value: 1}
+        InventoryRes: {type: :resref, value: sum_cardp181}
+        Repos_PosX: {type: :word, value: 2}
+        Repos_Posy: {type: :word, value: 9}
 Tag: {type: :cexostr, value: cards_wizard}
 WillNotBuy: 
   type: :list
