--- a/mod/utc/ele_e_greater.utc.yml
+++ b/mod/utc/ele_e_greater.utc.yml
@@ -1,55 +1,57 @@
 --- !nwn-lib.elv.es,2008-12/struct 
 __data_type: UTC
 __struct_id: 4294967295
-Appearance_Type: {type: :word, value: 1021}
+Appearance_Type: {type: :word, value: 1361}
 BodyBag: {type: :byte, value: 0}
-CRAdjust: {type: :int, value: -3}
+CRAdjust: {type: :int, value: -11}
 Cha: {type: :byte, value: 11}
-ChallengeRating: {type: :float, value: 3.0}
+ChallengeRating: {type: :float, value: 9.0}
 ClassList: 
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 2
     Class: {type: :int, value: 16}
-    ClassLevel: {type: :short, value: 8}
+    ClassLevel: {type: :short, value: 21}
 Comment: {type: :cexostr, value: ""}
-Con: {type: :byte, value: 16}
+Con: {type: :byte, value: 21}
 Conversation: {type: :resref, value: ""}
-CurrentHitPoints: {type: :short, value: 64}
+CurrentHitPoints: {type: :short, value: 168}
 DecayTime: {type: :dword, value: 5000}
 Deity: {type: :cexostr, value: ""}
 Description: 
   type: :cexolocstr
   value: {}
 
-Dex: {type: :byte, value: 21}
-Disarmable: {type: :byte, value: 0}
+Dex: {type: :byte, value: 8}
+Disarmable: {type: :byte, value: 1}
 Equip_ItemList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 16384, EquippedRes: {type: :resref, value: slam_ele_f_gross}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 32768, EquippedRes: {type: :resref, value: slam_ele_f_gross}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 131072, EquippedRes: {type: :resref, value: elementarfeuergr}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 16384, EquippedRes: {type: :resref, value: nw_it_crewpb017}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 32768, EquippedRes: {type: :resref, value: nw_it_crewpb017}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 131072, EquippedRes: {type: :resref, value: elementarhherer}}
 FactionID: {type: :word, value: 1}
 FeatList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 10}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 26}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 6}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 228}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 392}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 391}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 22}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 23}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 28}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 289}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 377}}
 FirstName: 
   type: :cexolocstr
   value: 
-    0: Feuerelementar (Gross)
+    0: "Erdelementar (H\xF6herer)"
 Gender: {type: :byte, value: 4}
 GoodEvil: {type: :byte, value: 50}
-HitPoints: {type: :short, value: 64}
-Int: {type: :byte, value: 6}
-Interruptable: {type: :byte, value: 0}
+HitPoints: {type: :short, value: 168}
+Int: {type: :byte, value: 8}
+Interruptable: {type: :byte, value: 1}
 IsImmortal: {type: :byte, value: 0}
 IsPC: {type: :byte, value: 0}
 LastName: 
@@ -58,14 +60,14 @@ LastName:
     4: ""
 LawfulChaotic: {type: :byte, value: 50}
 Lootable: {type: :byte, value: 0}
-MaxHitPoints: {type: :short, value: 88}
-NaturalAC: {type: :byte, value: 3}
+MaxHitPoints: {type: :short, value: 273}
+NaturalAC: {type: :byte, value: 12}
 NoPermDeath: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 22}
 PerceptionRange: {type: :byte, value: 11}
 Phenotype: {type: :int, value: 0}
 Plot: {type: :byte, value: 0}
-PortraitId: {type: :word, value: 2091}
+PortraitId: {type: :word, value: 2090}
 Race: {type: :byte, value: 16}
 ScriptAttacked: {type: :resref, value: nw_c2_default5}
 ScriptDamaged: {type: :resref, value: nw_c2_default6}
@@ -86,21 +88,10 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 11}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 5}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 6}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 14}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
@@ -111,23 +102,34 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-SoundSetFile: {type: :word, value: 34}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 14}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+SoundSetFile: {type: :word, value: 33}
 SpecAbilityList: 
   type: :list
   value: []
 
 StartingPackage: {type: :byte, value: 78}
-Str: {type: :byte, value: 14}
+Str: {type: :byte, value: 31}
 Subrace: {type: :cexostr, value: ""}
-Tag: {type: :cexostr, value: elem_f_gross}
-Tail: {type: :byte, value: 0}
+Tag: {type: :cexostr, value: ele_e_greater}
+Tail_New: {type: :dword, value: 818}
 TemplateList: 
   type: :list
   value: []
 
-TemplateResRef: {type: :resref, value: elem_f_gross}
-WalkRate: {type: :int, value: 7}
-Wings: {type: :byte, value: 0}
+TemplateResRef: {type: :resref, value: ele_e_greater}
+WalkRate: {type: :int, value: 4}
+Wings_New: {type: :dword, value: 0}
 Wis: {type: :byte, value: 11}
 fortbonus: {type: :short, value: 0}
 refbonus: {type: :short, value: 0}
