--- a/mod/utc/ele_e_large.utc.yml
+++ b/mod/utc/ele_e_large.utc.yml
@@ -1,58 +1,53 @@
 --- !nwn-lib.elv.es,2008-12/struct 
 __data_type: UTC
 __struct_id: 4294967295
-Appearance_Type: {type: :word, value: 1018}
+Appearance_Type: {type: :word, value: 1024}
 BodyBag: {type: :byte, value: 0}
-CRAdjust: {type: :int, value: -8}
+CRAdjust: {type: :int, value: -2}
 Cha: {type: :byte, value: 11}
-ChallengeRating: {type: :float, value: 9.0}
+ChallengeRating: {type: :float, value: 5.0}
 ClassList: 
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 2
     Class: {type: :int, value: 16}
-    ClassLevel: {type: :short, value: 21}
+    ClassLevel: {type: :short, value: 8}
 Comment: {type: :cexostr, value: ""}
-Con: {type: :byte, value: 21}
+Con: {type: :byte, value: 19}
 Conversation: {type: :resref, value: ""}
-CurrentHitPoints: {type: :short, value: 168}
+CurrentHitPoints: {type: :short, value: 64}
 DecayTime: {type: :dword, value: 5000}
 Deity: {type: :cexostr, value: ""}
 Description: 
   type: :cexolocstr
   value: {}
 
-Dex: {type: :byte, value: 20}
+Dex: {type: :byte, value: 8}
 Disarmable: {type: :byte, value: 1}
 Equip_ItemList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 16384, EquippedRes: {type: :resref, value: nw_it_crewpb017}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 32768, EquippedRes: {type: :resref, value: nw_it_crewpb017}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 131072, EquippedRes: {type: :resref, value: elementarhherer}}
-FactionID: {type: :word, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 16384, EquippedRes: {type: :resref, value: nw_it_crewpb016}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 32768, EquippedRes: {type: :resref, value: nw_it_crewpb016}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 131072, EquippedRes: {type: :resref, value: elementargross}}
+FactionID: {type: :word, value: 1}
 FeatList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 24}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 6}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 228}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 22}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 28}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 23}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 391}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 28}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 289}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 377}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 0}}
 FirstName: 
   type: :cexolocstr
   value: 
-    0: "H\xF6herer Wasserelementar"
+    0: Erdelementar (Gross)
 Gender: {type: :byte, value: 4}
 GoodEvil: {type: :byte, value: 50}
-HitPoints: {type: :short, value: 168}
-Int: {type: :byte, value: 8}
+HitPoints: {type: :short, value: 64}
+Int: {type: :byte, value: 6}
 Interruptable: {type: :byte, value: 1}
 IsImmortal: {type: :byte, value: 0}
 IsPC: {type: :byte, value: 0}
@@ -62,14 +57,14 @@ LastName:
     4: ""
 LawfulChaotic: {type: :byte, value: 50}
 Lootable: {type: :byte, value: 0}
-MaxHitPoints: {type: :short, value: 273}
-NaturalAC: {type: :byte, value: 7}
+MaxHitPoints: {type: :short, value: 96}
+NaturalAC: {type: :byte, value: 10}
 NoPermDeath: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 22}
 PerceptionRange: {type: :byte, value: 11}
 Phenotype: {type: :int, value: 0}
 Plot: {type: :byte, value: 0}
-PortraitId: {type: :word, value: 2102}
+PortraitId: {type: :word, value: 2090}
 Race: {type: :byte, value: 16}
 ScriptAttacked: {type: :resref, value: nw_c2_default5}
 ScriptDamaged: {type: :resref, value: nw_c2_default6}
@@ -93,7 +88,7 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 14}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 6}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
@@ -104,7 +99,7 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 14}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 5}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
@@ -115,23 +110,23 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-SoundSetFile: {type: :word, value: 35}
+SoundSetFile: {type: :word, value: 33}
 SpecAbilityList: 
   type: :list
   value: []
 
 StartingPackage: {type: :byte, value: 78}
-Str: {type: :byte, value: 26}
+Str: {type: :byte, value: 25}
 Subrace: {type: :cexostr, value: ""}
-Tag: {type: :cexostr, value: HhererWasserelementar}
-Tail: {type: :byte, value: 0}
+Tag: {type: :cexostr, value: ele_e_large}
+Tail_New: {type: :dword, value: 0}
 TemplateList: 
   type: :list
   value: []
 
-TemplateResRef: {type: :resref, value: ele_w_hherer}
-WalkRate: {type: :int, value: 7}
-Wings: {type: :byte, value: 0}
+TemplateResRef: {type: :resref, value: ele_e_large}
+WalkRate: {type: :int, value: 3}
+Wings_New: {type: :dword, value: 0}
 Wis: {type: :byte, value: 11}
 fortbonus: {type: :short, value: 0}
 refbonus: {type: :short, value: 0}
