--- a/mod/utc/ele_f_small.utc.yml
+++ b/mod/utc/ele_f_small.utc.yml
@@ -1,50 +1,51 @@
 --- !nwn-lib.elv.es,2008-12/struct 
 __data_type: UTC
 __struct_id: 4294967295
-Appearance_Type: {type: :word, value: 1019}
+Appearance_Type: {type: :word, value: 1023}
 BodyBag: {type: :byte, value: 0}
 CRAdjust: {type: :int, value: -1}
 Cha: {type: :byte, value: 11}
-ChallengeRating: {type: :float, value: 3.0}
+ChallengeRating: {type: :float, value: 1.0}
 ClassList: 
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 2
     Class: {type: :int, value: 16}
-    ClassLevel: {type: :short, value: 4}
+    ClassLevel: {type: :short, value: 2}
 Comment: {type: :cexostr, value: ""}
-Con: {type: :byte, value: 17}
+Con: {type: :byte, value: 10}
 Conversation: {type: :resref, value: ""}
-CurrentHitPoints: {type: :short, value: 32}
+CurrentHitPoints: {type: :short, value: 16}
 DecayTime: {type: :dword, value: 5000}
 Deity: {type: :cexostr, value: ""}
 Description: 
   type: :cexolocstr
   value: {}
 
-Dex: {type: :byte, value: 12}
+Dex: {type: :byte, value: 13}
 Disarmable: {type: :byte, value: 1}
 Equip_ItemList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 16384, EquippedRes: {type: :resref, value: nw_it_crewpb010}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 131072, EquippedRes: {type: :resref, value: elementar}}
-FactionID: {type: :word, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 16384, EquippedRes: {type: :resref, value: feuerelekleinhie}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 32768, EquippedRes: {type: :resref, value: feuerelekleinhie}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 131072, EquippedRes: {type: :resref, value: elementarfeuer}}
+FactionID: {type: :word, value: 1}
 FeatList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 6}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 228}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 28}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 10}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 377}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 42}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 289}}
 FirstName: 
   type: :cexolocstr
   value: 
-    0: Mittlerer Wasserelementar
+    0: Feuerelementar (Klein)
 Gender: {type: :byte, value: 4}
 GoodEvil: {type: :byte, value: 50}
-HitPoints: {type: :short, value: 32}
+HitPoints: {type: :short, value: 16}
 Int: {type: :byte, value: 4}
 Interruptable: {type: :byte, value: 1}
 IsImmortal: {type: :byte, value: 0}
@@ -55,14 +56,14 @@ LastName:
     4: ""
 LawfulChaotic: {type: :byte, value: 50}
 Lootable: {type: :byte, value: 0}
-MaxHitPoints: {type: :short, value: 44}
-NaturalAC: {type: :byte, value: 8}
+MaxHitPoints: {type: :short, value: 16}
+NaturalAC: {type: :byte, value: 3}
 NoPermDeath: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 22}
 PerceptionRange: {type: :byte, value: 11}
 Phenotype: {type: :int, value: 0}
 Plot: {type: :byte, value: 0}
-PortraitId: {type: :word, value: 312}
+PortraitId: {type: :word, value: 2091}
 Race: {type: :byte, value: 16}
 ScriptAttacked: {type: :resref, value: nw_c2_default5}
 ScriptDamaged: {type: :resref, value: nw_c2_default6}
@@ -86,6 +87,17 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 2}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 3}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
@@ -97,34 +109,23 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 4}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-SoundSetFile: {type: :word, value: 35}
+SoundSetFile: {type: :word, value: 34}
 SpecAbilityList: 
   type: :list
   value: []
 
 StartingPackage: {type: :byte, value: 78}
-Str: {type: :byte, value: 16}
+Str: {type: :byte, value: 10}
 Subrace: {type: :cexostr, value: ""}
-Tag: {type: :cexostr, value: MittlererWasserelementar}
-Tail: {type: :byte, value: 0}
+Tag: {type: :cexostr, value: ele_f_small}
+Tail_New: {type: :dword, value: 0}
 TemplateList: 
   type: :list
   value: []
 
-TemplateResRef: {type: :resref, value: mittlererwassere}
-WalkRate: {type: :int, value: 7}
-Wings: {type: :byte, value: 0}
+TemplateResRef: {type: :resref, value: ele_f_small}
+WalkRate: {type: :int, value: 5}
+Wings_New: {type: :dword, value: 0}
 Wis: {type: :byte, value: 11}
 fortbonus: {type: :short, value: 0}
 refbonus: {type: :short, value: 0}
