--- a/mod/uti/sum_cardp122.uti.yml
+++ b/mod/uti/sum_cardp122.uti.yml
@@ -1,11 +1,11 @@
 --- !nwn-lib.elv.es,2008-12/struct 
 __data_type: UTI
 __struct_id: 4294967295
-AddCost: {type: :dword, value: 597}
+AddCost: {type: :dword, value: 0}
 BaseItem: {type: :int, value: 24}
 Charges: {type: :byte, value: 0}
 Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 690}
+Cost: {type: :dword, value: 13}
 Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
@@ -14,12 +14,13 @@ DescIdentified:
 Description: 
   type: :cexolocstr
   value: 
+    0: ""
     4: ""
 Identified: {type: :byte, value: 1}
 LocalizedName: 
   type: :cexolocstr
   value: 
-    0: "Druidenrune: Stufe 5 - Grosser Wasserelementar"
+    0: "Druidenrune: Stufe 5 - Wasserelementar (Gross)"
 ModelPart1: {type: :byte, value: 30}
 PaletteID: {type: :byte, value: 54}
 Plot: {type: :byte, value: 1}
@@ -30,7 +31,7 @@ PropertiesList:
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
     CostTable: {type: :byte, value: 10}
-    CostValue: {type: :word, value: 3}
+    CostValue: {type: :word, value: 1}
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 0}
     PropertyName: {type: :word, value: 11}
@@ -46,18 +47,5 @@ PropertiesList:
     Subtype: {type: :word, value: 329}
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: CDRU_5_grosserwasserele}
+Tag: {type: :cexostr, value: CDRU_5_ele_w_large}
 TemplateResRef: {type: :resref, value: sum_cardp122}
-VarTable: 
-  type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 0
-    Name: {type: :cexostr, value: CARD_LEVEL}
-    Type: {type: :dword, value: 1}
-    Value: {type: :int, value: 5}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 0
-    Name: {type: :cexostr, value: CARD_RR}
-    Type: {type: :dword, value: 3}
-    Value: {type: :cexostr, value: GrosserWasserelementar}
