Gabel Schreiner: only buys arrows
fixes #244

--- a/mod/utm/st_schreiner.utm.yml
+++ b/mod/utm/st_schreiner.utm.yml
@@ -130,5 +130,5 @@ WillNotBuy:
 
 WillOnlyBuy: 
   type: :list
-  value: []
-
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 97869, BaseItem: {type: :int, value: 20}}
