nss/Makefile: show-stale, clean-stale
refs #299

--- a/mod/nss/Makefile
+++ b/mod/nss/Makefile
@@ -64,3 +64,15 @@ compile: Makefile.dep $(preprocessed) $(objects)
 
 tags: $(headers) $(scripts) $(corefiles)
 	@ctags --language-force=c --totals --c-kinds=cdefgmnpstuvx --fields=fksmnSzt $(corefiles) $(scripts) $(headers)
+
+show-stale:
+	@for x in *.ncs *.nss; do \
+		[[ -f "`basename $$x .ncs`.n" ]] || echo $$x; \
+		[[ -f "`basename $$x .nss`.n" ]] || echo $$x; \
+	done | sort -u
+
+clean-stale:
+	@for x in *.ncs *.nss; do \
+		[[ -f "`basename $$x .ncs`.n" ]] || rm -v $$x; \
+		[[ -f "`basename $$x .nss`.n" ]] || rm -v $$x; \
+	done
